--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <nav>
                 <ul>
                     <li><a href=index.html title="Homepage" class="selectedPage">Home</a></li>
-                    <li><a href=visit.html title="Plan your visit page">Plan your visit</a></li>
-                    <li><a href=exhibition.html title="Exhibition page">Exhibition spaces</a></li>
-                    <li><a href=events.html title="Special events page">Special events</a></li>
+                    <li><a href=visit.html title="Plan your visit page">Visit us</a></li>
+                    <li><a href=exhibition.html title="Exhibition page">Exhibitions</a></li>
+                    <li><a href=events.html title="Special events page">Events</a></li>
                     <li><a href=about.html title="About us">About us</a></li>
                 </ul>
             </nav>
@@ -33,53 +33,59 @@
 
             <section title="welcome" class=welcomeSection>
                 <h1>Welcome to Community Science Museum</h1>
-                <p>Come join us at the Community Science Museum where we’re committed to
-                    making science accessible to all. Let us explore together.</p>
-                <a href="visit.html" title="Go to plan your visit page">Plan your visit</a>
+                <div class="textCta">
+                    <p>Come join us at the Community Science Museum where we’re committed to
+                        making science accessible to all. Let us explore together.</p>
+                    <a href="visit.html" title="Go to plan your visit page" class="cta">Plan your visit</a>
+                </div>
             </section>
 
-            <section title="Some of our exhibitions">
+            <section title="Some of our exhibitions" class=exhibitionSection>
                 <div>
-                    <a href="exhitbition.html" title="">
-                        <img src="" title="">
+                    <a href="exhitbition.html" title="Go to exhibtion page">
+                        <img src="images/lunar.jpg"
+                            title="Lunar eclipse timelaps going from fool moon to dark to full moon again"
+                            class="exImage">
                         <p>Explore the wonders of our cosmos</p>
                     </a>
                 </div>
                 <div>
                     <a href="exhitbition.html" title="">
-                        <img src="" title="">
-                        <p>The human body</p>
+                        <img src="images/skeleton.jpg" title="" class="exImage">
+                        <p>Evolution</p>
                     </a>
                 </div>
                 <div>
                     <a href="exhitbition.html" title="">
-                        <img src="" title="">
-                        <p>Explore the wonders of our cosmos</p>
+                        <img src="images/vr.jpg" title="" class="exImage">
+                        <p>Robotics and AI</p>
                     </a>
                 </div>
             </section>
 
-            <section>
-                <p>Do you want to support the museum? There are various ways you can support the museum.</p>
-                <a href="about.html" title="Go to about us page">Support us</a>
+            <section class=welcomeSection>
+                <div class="textCta">
+                    <p>Do you want to support the museum? There are various ways you can support the museum.</p>
+                    <a href="about.html" title="Go to about us page" class="cta">Support us</a>
+                </div>
             </section>
 
-            <section title="Some of our special events">
+            <section title="Some of our special events" class=exhibitionSection>
                 <div>
                     <a href="event.html" title="">
-                        <img src="" title="">
+                        <img src="images/prof.jpg" title="" class="exImage">
                         <p>Professor of Aeronautics</p>
                     </a>
                 </div>
                 <div>
                     <a href="event.html" title="">
-                        <img src="" title="">
+                        <img src="images/night.jpg" title="" class="exImage">
                         <p>Sleepover at the museum</p>
                     </a>
                 </div>
                 <div>
                     <a href="event.html" title="">
-                        <img src="" title="">
+                        <img src="images/limited.jpg" title="" class="exImage">
                         <p>Limited exhibition</p>
                     </a>
                 </div>
