--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <section title="Some of our exhibitions" class=exhibitionSection>
                 <div>
-                    <a href="exhitbition.html" title="Go to exhibtion page">
+                    <a href="exhitbition.html#lunar" title="Go to exhibtion page">
                         <img src="images/lunar.jpg"
                             title="Lunar eclipse timelaps going from fool moon to dark to full moon again"
                             class="exImage">
@@ -50,13 +50,13 @@
                     </a>
                 </div>
                 <div>
-                    <a href="exhitbition.html" title="">
+                    <a href="exhitbition.html#biology" title="">
                         <img src="images/skeleton.jpg" title="" class="exImage">
                         <p>Evolution</p>
                     </a>
                 </div>
                 <div>
-                    <a href="exhitbition.html" title="">
+                    <a href="exhitbition.html#robotics" title="">
                         <img src="images/vr.jpg" title="" class="exImage">
                         <p>Robotics and AI</p>
                     </a>
@@ -66,25 +66,25 @@
             <section class=welcomeSection>
                 <div class="textCta">
                     <p>Do you want to support the museum? There are various ways you can support the museum.</p>
-                    <a href="about.html" title="Go to about us page" class="cta">Support us</a>
+                    <a href="about.html#support" title="Go to about us page" class="cta">Support us</a>
                 </div>
             </section>
 
             <section title="Some of our special events" class=exhibitionSection>
                 <div>
-                    <a href="event.html" title="">
+                    <a href="event.html#prof" title="Go to event Professor of Aeronautics">
                         <img src="images/prof.jpg" title="" class="exImage">
                         <p>Professor of Aeronautics</p>
                     </a>
                 </div>
                 <div>
-                    <a href="event.html" title="">
+                    <a href="event.html#night" title="Go to event Night at the museum">
                         <img src="images/night.jpg" title="" class="exImage">
-                        <p>Sleepover at the museum</p>
+                        <p>Night at the museum</p>
                     </a>
                 </div>
                 <div>
-                    <a href="event.html" title="">
+                    <a href="event.html#limited" title="Go to event limited exhibition">
                         <img src="images/limited.jpg" title="" class="exImage">
                         <p>Limited exhibition</p>
                     </a>
