--- a/events.html
+++ b/events.html
@@ -31,15 +31,31 @@
 
             <img src="images/home.jpg" alt="Picture of an exhibiton spcace in Community Science Museum" class=imageHome>
 
-            <section title="welcome" class=welcomeSection>
-                <h1>About us</h1>
+            <section title="Special Events" class=welcomeSection>
+                <h1>Special events</h1>
                 <div class="textCta">
-                    <p>Come join us at the Community Science Museum where we’re committed to
-                        making science accessible to all. Let us explore together.</p>
-                    <a href="visit.html" title="Go to plan your visit page" class="cta">Plan your visit</a>
+                    <p class="textWidth">Over the course of human history, science has developed from our early
+                        understanding of fire, wind, water, and earth to exploring everything from galaxies far away to
+                        the very building blocks of
+                        life itself.
+                    </p>
                 </div>
             </section>
-            
+
+            <section title="Visiting Professor of Aeronautics" class="exhibtionArea">
+                <div>
+                    <img src="images/prof.jpg" alt="Professor holding a lecture infront of an audience" class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Visiting Professor of Aeronautics</h2>
+                    <p class=textWidth>
+                        It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of
+                        Technology will be delivering 3 lectures on the development of aeronautics and where the future
+                        lies in this exciting ‘space’.
+                    </p>
+                </div>
+            </section>
+
         </div>
     </main>
     <footer>
