--- a/exhibition.html
+++ b/exhibition.html
@@ -29,13 +29,119 @@
     <main>
         <div class=mainWidth>
             <img src="images/home.jpg" alt="Picture of an exhibiton spcace in Community Science Museum" class=imageHome>
-            
-            <section title="welcome" class=welcomeSection>
-                <h1>About us</h1>
-                <div class="textCta">
-                    <p>Come join us at the Community Science Museum where we’re committed to
-                        making science accessible to all. Let us explore together.</p>
-                    <a href="visit.html" title="Go to plan your visit page" class="cta">Plan your visit</a>
+
+            <section title="exhibitions" class=welcomeSection>
+                <h1>Exhibition spaces</h1>
+                <p class="textWidth">We believe science should not be confined to the textbook, but brought to live
+                    through exhibits. This
+                    is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many
+                    of these exhibits are designed for you to interact with and play around to see science come to life
+                    (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
+                </p>
+            </section>
+
+            <section title="The Cosmology Exhibition" class="exhibtionArea">
+                <div>
+                    <img src="images/lunar.jpg"
+                        alt="Lunar eclipse timelaps going from fool moon to dark to full moon again" class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Cosmology</h2>
+                    <p class=textWidth>
+                        Explore the wonders of our cosmos. Our fantastic exhibition, ‘The SkyAbove Us’, explores the
+                        night
+                        sky
+                        and what we can see and know about the universe around us. We’ll locate the various
+                        constellations
+                        and galaxies that can be seen and learn a bit about the early navigators who used the stars to
+                        travel by.
+                    </p>
+                    <p class=textWidth>
+                        Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to
+                        the
+                        latest exploration
+                        of the planets in our solar system.
+                    </p>
+                </div>
+            </section>
+
+            <section title="Evolution" class="exhibtionArea">
+                <div>
+                    <img src="images/skeleton.jpg" alt="Skeletons of evolution of ape to human" class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Evolution</h2>
+                    <p class=textWidth>
+                        From micro-organisms to the human body, major breakthroughs in biology are offering us unique
+                        insights into the great wonders of the tiny world.
+                    </p>
+                    <p class=textWidth>
+                        For many people their life expectancy is much longer and their quality of life much improved,
+                        thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the
+                        history of medicine and take a look at some major breakthroughs including the discovery of
+                        penicillin and the first heart transplant.
+                    </p>
+                    <p class=textWidth>
+                        Many of our great medicinal discoveries have come not only from the lab, but also from observing
+                        animals in the wild. Often our fellow creatures have beat us to it.
+                    </p>
+
+                </div>
+            </section>
+
+            <section title="Robotics and AI" class="exhibtionArea">
+                <div>
+                    <img src="images/ai.jpg" alt="Girl trying VR glasses" class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Robotics and AI</h2>
+                    <p class=textWidth>
+                        The information revolution is here and robotics and artificial intelligence are the science of
+                        the future. From useful home applications of AI to industrial uses of robotics, the future is
+                        here. You can even say hello and shake the hand of Rob the Robot.
+                    </p>
+                </div>
+            </section>
+
+            <section title="Ecology" class="exhibtionArea">
+                <div>
+                    <img src="images/ant.jpg" alt="One very big and a not so big ant" class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Egology</h2>
+                    <p class=textWidth>
+                        As we learn more and more of the impact humans are having on the planet, the more important it
+                        becomes that scientists explore how to create a sustainable future not just for humans but for
+                        the whole planet.
+                    </p>
+                    <p class=textWidth>
+                        In our ecology section of the museum, we unpack the dangers we currently face including global
+                        warming, extinction of species, and pollution. But we also focus on the positive ways we can all
+                        contribute to a brighter future.
+                    </p>
+                </div>
+            </section>
+
+            <section title="Biology and medicine" class="exhibtionArea">
+                <div>
+                    <img src="images/heart.jpg" alt="Model of a human heart" class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Biology and medicine</h2>
+                    <p class=textWidth>
+                        From micro-organisms to the human body, major breakthroughs in biology are offering us unique
+                        insights into the great wonders of the tiny world.
+                    </p>
+                    <p class=textWidth>
+                        For many people their life expectancy is much longer and their quality of life much improved,
+                        thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the
+                        history of medicine and take a look at some major breakthroughs including the discovery of
+                        penicillin and the first heart transplant.
+                    </p>
+                    <p class=textWidth>
+                        Many of our great medicinal discoveries have come not only from the lab, but also from observing
+                        animals in the wild. Often our fellow creatures have beat us to it.
+                    </p>
                 </div>
             </section>
 
@@ -47,4 +153,3 @@
         </div>
     </footer>
 </body>
-
