--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section title="welcome" class=welcomeSection>
                 <h1>Welcome to Community Science Museum</h1>
                 <div class="textCta">
-                    <p>Come join us at the Community Science Museum where we’re committed to
+                    <p class="textWidth">Come join us at the Community Science Museum where we’re committed to
                         making science accessible to all. Let us explore together.</p>
                     <a href="visit.html" title="Go to plan your visit page" class="cta">Plan your visit</a>
                 </div>
