--- a/events.html
+++ b/events.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <title>Special events at Community Science Museum</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="styles/styles.css" rel="stylesheet" />
 </head>
 
@@ -29,12 +30,13 @@
     <main>
         <div class=mainWidth>
 
-            <img src="images/home.jpg" alt="Picture of an exhibiton spcace in Community Science Museum" class=imageHome>
+            <img src="images/event.jpg" alt="Picture of an exhibiton spcace in Community Science Museum"
+                class=imageHome>
 
             <section title="Special Events" class=welcomeSection>
                 <h1>Special events</h1>
-                <div class="textCta">
-                    <p class="textWidth">Over the course of human history, science has developed from our early
+                <div class="textWidth">
+                    <p>Over the course of human history, science has developed from our early
                         understanding of fire, wind, water, and earth to exploring everything from galaxies far away to
                         the very building blocks of
                         life itself.
@@ -52,6 +54,37 @@
                         It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of
                         Technology will be delivering 3 lectures on the development of aeronautics and where the future
                         lies in this exciting ‘space’.
+                    </p>
+                </div>
+            </section>
+
+            <section title="Night in the museum" class="exhibtionArea">
+                <div>
+                    <img src="images/night.jpg" alt="Professor holding a lecture infront of an audience"
+                        class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Night in the museum</h2>
+                    <p class=textWidth>
+                        Get your family together for an exciting night in the museum as you sleep over beside dinosaurs
+                        and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring
+                        the wonders of science.
+                    </p>
+                </div>
+            </section>
+
+            <section title="Energetica Exhibition on Loan" class="exhibtionArea">
+                <div>
+                    <img src="images/limited.jpg" alt="Professor holding a lecture infront of an audience"
+                        class="exImage">
+                </div>
+                <div class="exhibtionText">
+                    <h2 class=textWidth>Energetica Exhibition on Loan</h2>
+                    <p class=textWidth>
+                        On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the
+                        Community Science Museum. It’s a series of installations that allow visitors to experience the
+                        power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’
+                        that shows how turbines are able to use and control wind to create power.
                     </p>
                 </div>
             </section>
