--- a/exhibition.html
+++ b/exhibition.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <title>Exhibition spaces at Community Science Museum</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="styles/styles.css" rel="stylesheet" />
 </head>
 
@@ -28,16 +29,21 @@
     </header>
     <main>
         <div class=mainWidth>
-            <img src="images/home.jpg" alt="Picture of an exhibiton spcace in Community Science Museum" class=imageHome>
+            <img src="images/exhibition.jpg" alt="Picture of an exhibiton spcace in Community Science Museum"
+                class=imageHome>
 
             <section title="exhibitions" class=welcomeSection>
-                <h1>Exhibition spaces</h1>
-                <p class="textWidth">We believe science should not be confined to the textbook, but brought to live
-                    through exhibits. This
-                    is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many
-                    of these exhibits are designed for you to interact with and play around to see science come to life
-                    (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
-                </p>
+                <div class="textWidth">
+                    <h1>Exhibition spaces</h1>
+                    <p>We believe science should not be confined to the textbook, but brought to live
+                        through exhibits. This
+                        is why we have over 1000 different exhibits on the many varied subjects of science to explore.
+                        Many
+                        of these exhibits are designed for you to interact with and play around to see science come to
+                        life
+                        (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
+                    </p>
+                </div>
             </section>
 
             <section title="The Cosmology Exhibition" class="exhibtionArea">
@@ -91,7 +97,7 @@
 
             <section title="Robotics and AI" class="exhibtionArea">
                 <div>
-                    <img src="images/ai.jpg" alt="Girl trying VR glasses" class="exImage">
+                    <img src="images/vr.jpg" alt="Girl trying VR glasses" class="exImage">
                 </div>
                 <div class="exhibtionText">
                     <h2 class=textWidth>Robotics and AI</h2>
@@ -105,7 +111,7 @@
 
             <section title="Ecology" class="exhibtionArea">
                 <div>
-                    <img src="images/ant.jpg" alt="One very big and a not so big ant" class="exImage">
+                    <img src="images/ants.jpg" alt="One very big and a not so big ant" class="exImage">
                 </div>
                 <div class="exhibtionText">
                     <h2 class=textWidth>Egology</h2>
