--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <title>Community Science Museum</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="styles/styles.css" rel="stylesheet" />
 </head>
 
@@ -36,7 +37,7 @@
                 <div class="textCta">
                     <p class="textWidth">Come join us at the Community Science Museum where we’re committed to
                         making science accessible to all. Let us explore together.</p>
-                    <a href="visit.html" title="Go to plan your visit page" class="cta">Plan your visit</a>
+                    <a href="visit.html" title="Go to visit us page" class="cta">Visit us</a>
                 </div>
             </section>
 
@@ -63,10 +64,11 @@
                 </div>
             </section>
 
-            <section class=welcomeSection>
+            <section title="Support us" class=welcomeSection>
                 <div class="textCta">
-                    <p>Do you want to support the museum? There are various ways you can support the museum.</p>
-                    <a href="about.html#support" title="Go to about us page" class="cta">Support us</a>
+                    <p class="textWidth">Do you want to support the museum? There are various ways you can support the
+                        museum.</p>
+                    <a href="about.html#support" title="Go to about us page" class="cta" id="cta2">Support us</a>
                 </div>
             </section>
 
