--- a/visit.html
+++ b/visit.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <title>Visit Community Science Museum</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="styles/styles.css" rel="stylesheet" />
 </head>
 
@@ -28,16 +29,110 @@
     </header>
     <main>
         <div class=mainWidth>
-            <img src="images/home.jpg" alt="Picture of Community Science Museum" class=imageHome>
+            <img src="images/visit.jpg" alt="Picture of Community Science Museum" class=imageHome>
 
             <section title="welcome" class=welcomeSection>
-                <h1>About us</h1>
-                <div class="textCta">
+                <h1>Visit</h1>
+                <div class="textWidth">
                     <p>Come join us at the Community Science Museum where we’re committed to
                         making science accessible to all. Let us explore together.</p>
-                    <a href="visit.html" title="Go to plan your visit page" class="cta">Plan your visit</a>
                 </div>
             </section>
+
+            <div class=visitPage>
+                <section title="Location" class="visitInfo">
+                    <div class="visitText">
+                        <h2>Location</h2>
+                        <p>
+                            The museum is located at:
+                        </p>
+                        <ol class="noListPadding">
+                            <li class="listStyle">
+                                Kong Olav V's gate 1
+                            </li>
+                            <li class="listStyle">
+                                6508 Kristiansund
+                            </li>
+                        </ol>
+                    </div>
+                </section>
+
+                <section title="Admission" class="visitInfo">
+                    <div class="visitText">
+                        <h2>Admission</h2>
+                        <p>
+                            The entrance is free for all.
+                        </p>
+                        <p>
+                            There are guided tours of the museum that leave every hour. These tours are 70 NOK per
+                            person
+                            and include a handy printed guide of the museum.
+                        </p>
+                        <p>
+                            If you would like to organise a guided tour for your group of 6 or more people, please
+                            contact
+                            us to arrange the tour.
+                        </p>
+                    </div>
+                </section>
+
+                <section title="Opening hours" class="visitInfo">
+                    <div class="visitText">
+                        <h2>Opening hours</h2>
+                        <div class="hoursList">
+                            <ol class="listStyle">
+                                <li>Monday</li>
+                                <li>Tuesday</li>
+                                <li>Wednesday</li>
+                                <li>Thursday</li>
+                                <li>Friday</li>
+                                <li>Saturday</li>
+                                <li>Sunday</li>
+                            </ol>
+                            <ol class="listStyle">
+                                <li>10:00 - 16:00</li>
+                                <li>10:00 - 16:00</li>
+                                <li>10:00 - 16:00</li>
+                                <li>10:00 - 16:00</li>
+                                <li>10:00 - 19:00</li>
+                                <li>10:00 - 16:00</li>
+                                <li>10:00 - 13:00</li>
+                            </ol>
+                        </div>
+                    </div>
+                </section>
+
+                <section title="Accessibility" class="visitInfo">
+                    <div class="visitText">
+                        <h2>Accessibility</h2>
+                        <p>
+                            The museum has wheelchair accessibility ramps. It also has audio guides and braille display
+                            signs for the visually impaired.
+                        </p>
+                    </div>
+                </section>
+
+                <section title="Food and drink" class="visitInfo">
+                    <div class="visitText">
+                        <h2>Food and drink</h2>
+                        <p>
+                            There is a café attached to the museum where you can get light lunches, soft drinks, coffee,
+                            snacks and more.
+                        </p>
+                    </div>
+                </section>
+
+                <section title="Shop" class="visitInfo">
+                    <div class="visitText">
+                        <h2>Shop</h2>
+                        <p>
+                            Our shop offers a range of memorabilia from the museum as well as great gifts and activity
+                            packs
+                            that allow you to continue to explore science even after you’ve left the museum.
+                        </p>
+                    </div>
+                </section>
+            </div>
 
         </div>
     </main>
