--- a/about.html
+++ b/about.html
@@ -2,49 +2,193 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Community Science Museum - Explore together" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <title>Special events at Community Science Museum</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link href="styles/styles.css" rel="stylesheet" />
+  <meta name="description" content="Community Science Museum - Explore together" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <title>Special events at Community Science Museum</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <link href="styles/styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <header>
-        <div class=mainWidth>
-            <a href=index.html title="Homepage"><img src="images/csm-logo.png" alt="Community Science Museum logo"
-                    class="headerLogo">
-            </a>
-            <nav>
-                <ul>
-                    <li><a href=index.html title="Homepage">Home</a></li>
-                    <li><a href=visit.html title="Plan your visit page">Visit us</a></li>
-                    <li><a href=exhibition.html title="Exhibition page">Exhibitions</a></li>
-                    <li><a href=events.html title="Special events page">Events</a></li>
-                    <li><a href=about.html title="About us" class="selectedPage">About us</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class=mainWidth>
-            <img src="images/home.jpg" alt="Picture of an exhibiton spcace in Community Science Museum" class=imageHome>
+  <header>
+    <div class="mainWidth">
+      <a href="index.html" title="Homepage"><img src="images/csm-logo.png" alt="Community Science Museum logo"
+          class="headerLogo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html" title="Homepage">Home</a></li>
+          <li>
+            <a href="visit.html" title="Plan your visit page">Visit us</a>
+          </li>
+          <li>
+            <a href="exhibition.html" title="Exhibition page">Exhibitions</a>
+          </li>
+          <li>
+            <a href="events.html" title="Special events page">Events</a>
+          </li>
+          <li>
+            <a href="about.html" title="About us" class="selectedPage">About us</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <div class="mainWidth">
+      <img src="images/about.jpg" alt="Picture of an exhibiton spcace in Community Science Museum" class="imageHome" />
 
-            <section title="welcome" class=welcomeSection>
-                <h1>About us</h1>
-                <div class="textCta">
-                    <p>Come join us at the Community Science Museum where we’re committed to
-                        making science accessible to all. Let us explore together.</p>
-                    <a href="visit.html" title="Go to plan your visit page" class="cta">Plan your visit</a>
-                </div>
-            </section>
+      <section title="welcome" class="welcomeSection">
+        <h1>About us</h1>
+        <div class="textWidth">
+          <p>
+            The aim of our museum is to create a space where everyone can experience the wonders of our
+            discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around
+            us.
+          </p>
+        </div>
+      </section>
 
+      <section title="For kids" class="exhibtionArea">
+        <div>
+          <img src="images/kids.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
         </div>
-    </main>
-    <footer>
-        <div class=mainWidth>
-            <span> &copy;2022 Community Science Museum </span>
+        <div class="exhibtionText">
+          <h2 class="textWidth">For kids</h2>
+          <p class="textWidth">
+            Are you a young person looking to learn more about science? Come
+            on down to our museum, there’s plenty to see and do.
+          </p>
+          <p class="textWidth">
+            You can learn about Newtonian physics from our bumper swing, or
+            why not travel back in time and meet our resident Woolly Mammoth?
+            Our exhibits are designed to be accessible for interested minds,
+            so make sure you come ready to learn and explore.
+          </p>
+          <p class="textWidth">
+            We also have the Young Stars club which meets once a week on a
+            Saturday between 10:00 and 13:00 where you’ll get to explore and
+            experiment with our team of experts.
+          </p>
+          <p class="textWidth">
+            During the school holidays we run special holiday clubs where you
+            can join other children your age to go on a journey of discovery.
+            Each holiday we pick a new theme to explore. To find out more
+            about the holiday club and how you can join, send us a message.
+          </p>
         </div>
-    </footer>
+      </section>
+
+      <section title="For teacher" class="exhibtionArea">
+        <div>
+          <img src="images/teacher.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+        </div>
+        <div class="exhibtionText">
+          <h2 class="textWidth">For teacher</h2>
+          <p class="textWidth">
+            As a community-driven museum, we want to work with schools to
+            create places of learning and exploring. Our team are on hand to
+            give your students guided tours of the museum, teach them in our
+            learning laboratory, and provide great video presentations that
+            will excite and inspire them.
+          </p>
+          <p class="textWidth">
+            Please get in touch with us here to find out more about our
+            facilities and to arrange a time to bring your students through
+            for a visit.
+          </p>
+        </div>
+      </section>
+
+      <section title="For researcher" class="exhibtionArea">
+        <div>
+          <img src="images/researcher.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+        </div>
+        <div class="exhibtionText">
+          <h2 class="textWidth">For researcher</h2>
+          <p class="textWidth">
+            Are you looking to get involved with our team of researchers and
+            academics? Our museum offers various ways for you to use our
+            resources and contribute towards them. We have online records,
+            laboratory space, and a working relationship with a number of
+            universities around the country.
+          </p>
+        </div>
+      </section>
+
+      <section title="Support" class="exhibtionArea" id="support">
+        <div>
+          <img src="images/support.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+        </div>
+        <div class="exhibtionText">
+          <h2 class="textWidth">Support</h2>
+          <p class="textWidth">
+            There are various ways you can support the museum. Donations are
+            very welcome and are an important way we keep this museum open and
+            accessible to the whole community.
+          </p>
+          <p class="textWidth">
+            You can also support us by donating items of interest to the
+            museum’s collections. If you have some item or collection that you
+            think others would enjoy, please let us know by contacting our
+            Collections Department and they will be able to assist you.
+          </p>
+        </div>
+      </section>
+
+      <section title="Volunteer" class="exhibtionArea">
+        <div>
+          <img src="images/volunteer.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+        </div>
+        <div class="exhibtionText">
+          <h2 class="textWidth">Volunteer</h2>
+          <p class="textWidth">
+            A number of people volunteer their time and effort to keep the
+            displays in good order and ready for visitors to come and enjoy.
+            Volunteering has its perks including getting to see behind the
+            scenes of a working museum, access to staff-only lectures, and a
+            monthly lunch where all staff and volunteers come together to
+            discuss ideas for future exhibits and strategies for the museum.
+          </p>
+          <p class="textWidth">
+            You can help volunteer in a number of different spheres. Please
+            contact us if you’d like to find out more about how you can get
+            involved.
+          </p>
+        </div>
+      </section>
+
+      <section title="Internship" class="exhibtionArea">
+        <div>
+          <img src="images/intern4.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+        </div>
+        <div class="exhibtionText">
+          <h2 class="textWidth">Internship</h2>
+          <p class="textWidth">
+            A number of people volunteer their time and effort to keep the
+            displays in good order and ready for visitors to come and enjoy.
+            Volunteering has its perks including getting to see behind the
+            scenes of a working museum, access to staff-only lectures, and a
+            monthly lunch where all staff and volunteers come together to
+            discuss ideas for future exhibits and strategies for the museum.
+          </p>
+          <p class="textWidth">
+            You can help volunteer in a number of different spheres. Please
+            contact us if you’d like to find out more about how you can get
+            involved.
+          </p>
+        </div>
+      </section>
+
+    </div>
+  </main>
+  <footer>
+    <div class="mainWidth">
+      <span> &copy;2022 Community Science Museum </span>
+    </div>
+  </footer>
 </body>
+
+</html>
